first commit by ytw0728 (2)

--- a/result/Makefile
+++ b/result/Makefile
@@ -4,10 +4,11 @@ Build:  ../*.c
 		gcc -c ../*.c ../SSUpreme.h
 		
 
-Link :  ../core.o ../kijeong.o ../machugi.o
-		gcc -o a.out ../core.o ../kijeong.o ../machugi.o
+Link :  core.o kijeong.o machugi.o
+		gcc -o a.out core.o kijeong.o machugi.o
 
 
 clean : 
-		rm ../*.o
-		rm ../a.out
+		rm *.o
+		rm a.out
+		rm ../*.gch
