restruct of our project

--- a/result/Makefile
+++ b/result/Makefile
@@ -2,13 +2,13 @@ Start:  Build Link
 
 Build:  ../*.c
 		gcc -c ../*.c ../SSUpreme.h
-		
+		mv *.o ../Object
 
-Link :  core.o kijeong.o machugi.o
-		gcc -o a.out core.o kijeong.o machugi.o
 
+Link :  ../Object/core.o ../Object/kijeong.o ../Object/machugi.o
+		gcc -o a.out ../Object/core.o ../Object/kijeong.o ../Object/machugi.o
 
 clean : 
-		rm *.o
+		rm ../Object/*.o
 		rm a.out
 		rm ../*.gch
